2006-02-02  Stan Cox  <scox@redhat.com>

	* TestExec.java (testAttachedSingleExec): Add ExecObserver. 

2006-02-01  Andrew Cagney  <cagney@redhat.com>

	* Proc.java (toString): Do not print the command, has sideffects.
	(sendrecCommand): New abstract method.
	(getCommand): Change to a function.
	(command): New private variable.
	* LinuxProc.java (sendrecCommand): Rename getCommand.

	* Host.java (requestRefreshXXX(boolean)): Rename requestRefresh.
	(requestRefresh()): Delete.
	* TestSyscallInterrupt.java: Update.
	* TestRefresh.java: Update.
	* TestLib.java: Update.

2006-01-31  Andrew Cagney  <cagney@redhat.com>

	* Host.java (observableProcAddedXXX): Rename observableProcAdded.
	(observableProcRemovedXXX): Rename observableProcRemoved.
	(observableTaskAddedXXX): Rename observableTaskAdded.
	(observableTaskRemovedXXX): Rename observableTaskRemoved.
	* Proc.java: Update.
	* TestI386Modify.java: Update.
	* TestI386Regs.java: Update.
	* TestLib.java: Update.
	* TestModify.java: Update.
	* TestRefresh.java: Update.
	* TestSyscall.java: Update.
	* TestSyscall2.java: Update.
	* TestSyscallInterrupt.java: Update.
	* TestSyscallOpen.java: Update.

2006-01-29  Stan Cox  <scox@redhat.com>

	* Proc.java (retain): Use HashMap instead of Collection.
	* TestExec.java (testAttachedSingleExec): New.
	(testAttachedMultipleExec): New.

2006-01-24  Stan Cox  <scox@redhat.com>

	* Host.java (add,remove,removeTasks,get,getProc,requestRefresh,execute)
	(requestRefresh,requestCreateAttachedProc): Improve logger messages.
	* ProcState.java (ProcState,isStopped,process*,state): logger messages.
	* TaskEvent.java (getTask): logger messages.
	* TaskState.java (process*): logger messages.

2006-01-19  Andrew Cagney  <cagney@redhat.com>

	* TestRefresh.java (testUnattachedMultipleExec)
	(testUnattachedSingleExec): Simplify, use string comparison to
	check getCmdLine()[0].

	* TestLib.java (AckProcess.execClone): Wait for both parentAck and
	childAck.

2006-01-19  Stan Cox  <scox@redhat.com>
