@@ -1,3 +1,8 @@
+2006-02-02  Andrew Cagney  <cagney@redhat.com>
+
+	* TestExec.java (testAttachedSingleExec): Simplify, eliminate
+	explict refresh call.
+
 2006-02-02  Stan Cox  <scox@redhat.com>
 
 	* TestExec.java (testAttachedSingleExec): Add ExecObserver. 
